started migration